Se cambia a new tab

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -60,7 +60,7 @@
                       <li><a href="{% url 'admin:localinfo_calendarinfo_changelist' %}">Asignar días al calendario</a></li>
                     </ul>
                   </li>
-                  <li><a href="{% url 'admin:localinfo_faq_changelist' %}"> Preguntas Frecuentes</a></li>
+                  <li><a  href="{% url 'admin:localinfo_faq_changelist' %}"> Preguntas Frecuentes</a></li>
                 </ul>
               </li>
               {% endif %}
@@ -198,7 +198,7 @@
               </ul>
             </li>
             <li>
-              <a href="{% url 'localinfo:faq' %}" >
+              <a target="_blank" href="{% url 'localinfo:faq' %}" >
                   <i class="fa fa-question-circle-o fa-5x"></i>
               </a>
             </li>
