Se actualiza el modelo de faq

--- a/localinfo/templates/localinfo/faq.html
+++ b/localinfo/templates/localinfo/faq.html
@@ -47,7 +47,7 @@
                         {% for question in values %}
                             <li class="cd-faq__item">
                                 <a class="cd-faq__trigger" href="#0"><span
-                                        style="color: #2a3f54">{{ question.title }}</span></a>
+                                        style="color: #2a3f54">{{ question.question }}</span></a>
                                 <div class="cd-faq__content">
                                     <div class="text-component">
                                         {{ question.answer |safe }}
