--- a/localinfo/templates/localinfo/faq.html
+++ b/localinfo/templates/localinfo/faq.html
@@ -15,6 +15,8 @@
     {% with "components/faq-template/" as faq_template_static %}
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{% static faq_template_static|add:"assets/css/style.css" %}">
+        <link rel="stylesheet" href="{% static "components/gentelella/vendors/font-awesome/css/font-awesome.min.css" %}">
+
         {% block blockbots %}
             <meta name="robots" content="NONE,NOARCHIVE"/>{% endblock %}
         </head>
@@ -23,8 +25,15 @@
               data-admin-utc-offset="{% now "Z" %}">
         <header style="background-color: #2a3f54" class="cd-header flex flex-column flex-center">
             <div class="text-component text-center">
-                <h1>Preguntas Frecuentes</h1>
+                <h1> ADATRAP: Preguntas Frecuentes</h1>
             </div>
+            <br>
+            <!--<p style="color: white">Esta sección contiene las preguntas frecuentes para las distintas visualizaciones de la aplicación.</p>
+            -->
+            <br>
+          <input type="text" class="form-control" placeholder="Búsqueda" aria-label="Recipient's username">
+            <span class="input-group-text"><i class="fa fa-search"></i>
+            </span>
         </header>
 
         <section class="cd-faq js-cd-faq container max-width-md margin-top-lg margin-bottom-lg">
