--- a/localinfo/templates/localinfo/faq.html
+++ b/localinfo/templates/localinfo/faq.html
@@ -15,10 +15,93 @@
     {% with "components/faq-template/" as faq_template_static %}
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{% static faq_template_static|add:"assets/css/style.css" %}">
-        <link rel="stylesheet" href="{% static "components/gentelella/vendors/font-awesome/css/font-awesome.min.css" %}">
+        <link rel="stylesheet"
+              href="{% static "components/gentelella/vendors/font-awesome/css/font-awesome.min.css" %}">
 
         {% block blockbots %}
             <meta name="robots" content="NONE,NOARCHIVE"/>{% endblock %}
+
+        <style>
+            * {
+                box-sizing: border-box;
+            }
+
+            body {
+                margin: 0;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+
+            .topnav {
+                overflow: hidden;
+                background-color: #e9e9e9;
+            }
+
+            .topnav a {
+                float: left;
+                display: block;
+                color: black;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                font-size: 17px;
+            }
+
+            .topnav a:hover {
+                background-color: #ddd;
+                color: black;
+            }
+
+            .topnav a.active {
+                background-color: #2196F3;
+                color: white;
+            }
+
+            .topnav .search-container {
+                float: right;
+            }
+
+            .topnav input[type=text] {
+                padding: 6px;
+                margin-top: 8px;
+                font-size: 17px;
+                border: none;
+            }
+
+            .topnav .search-container button {
+                float: right;
+                padding: 6px 10px;
+                margin-top: 8px;
+                margin-right: 16px;
+                background: #ddd;
+                font-size: 17px;
+                border: none;
+                cursor: pointer;
+            }
+
+            .topnav .search-container button:hover {
+                background: #ccc;
+            }
+
+            @media screen and (max-width: 600px) {
+                .topnav .search-container {
+                    float: none;
+                }
+
+                .topnav a, .topnav input[type=text], .topnav .search-container button {
+                    float: none;
+                    display: block;
+                    text-align: left;
+                    width: 100%;
+                    margin: 0;
+                    padding: 14px;
+                }
+
+                .topnav input[type=text] {
+                    border: 1px solid #ccc;
+                }
+            }
+        </style>
+
         </head>
 
         <body class="{% if is_popup %}popup {% endif %}{% block bodyclass %}{% endblock %}"
@@ -27,14 +110,21 @@
             <div class="text-component text-center">
                 <h1> ADATRAP: Preguntas Frecuentes</h1>
             </div>
-            <br>
             <!--<p style="color: white">Esta sección contiene las preguntas frecuentes para las distintas visualizaciones de la aplicación.</p>
             -->
-            <br>
-          <input type="text" class="form-control" placeholder="Búsqueda" aria-label="Recipient's username">
-            <span class="input-group-text"><i class="fa fa-search"></i>
-            </span>
         </header>
+
+        <div class="topnav">
+
+            <div class="search-container">
+                <form action="/action_page.php">
+                    <input type="text" placeholder="Buscar" name="search">
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                </form>
+            </div>
+        </div>
+
+
 
         <section class="cd-faq js-cd-faq container max-width-md margin-top-lg margin-bottom-lg">
             <ul class="cd-faq__categories">
