--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -199,7 +199,7 @@
               </ul>
             </li>
             <li>
-              <a target="_blank" href="{% url 'localinfo:faq' %}" >
+              <a target="_blank" href="{% url 'faq' %}" >
                   <i class="fa fa-question-circle-o fa-5x"></i>
               </a>
             </li>
