--- a/localinfo/templates/localinfo/faq.html
+++ b/localinfo/templates/localinfo/faq.html
@@ -108,16 +108,15 @@
               data-admin-utc-offset="{% now "Z" %}">
         <header style="background-color: #2a3f54" class="cd-header flex flex-column flex-center">
             <div class="text-component text-center">
-                <h1> ADATRAP: Preguntas Frecuentes </h1>
+                    <h1> <a style="text-decoration: none; color: white" href="{% url "faq" %}"> ADATRAP: Preguntas Frecuentes </a></h1>
             </div>
             <!--<p style="color: white">Esta sección contiene las preguntas frecuentes para las distintas visualizaciones de la aplicación.</p>
             -->
         </header>
 
         <div class="topnav">
-            <a href="{% url "localinfo:faq" %}"><i class="fa fa-dashboard"></i> Inicio</a>
             <div class="search-container">
-                <form action="{% url "localinfo:faq" %}">
+                <form action="{% url "faq" %}">
                     <input type="text" placeholder="Buscar" name="search">
                     <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
