--- a/localinfo/templates/localinfo/faq.html
+++ b/localinfo/templates/localinfo/faq.html
@@ -108,7 +108,8 @@
               data-admin-utc-offset="{% now "Z" %}">
         <header style="background-color: #2a3f54" class="cd-header flex flex-column flex-center">
             <div class="text-component text-center">
-                    <h1> <a style="text-decoration: none; color: white" href="{% url "faq" %}"> ADATRAP: Preguntas Frecuentes </a></h1>
+                <h1><a style="text-decoration: none; color: white" href="{% url "faq" %}"> ADATRAP: Preguntas
+                    Frecuentes </a></h1>
             </div>
             <!--<p style="color: white">Esta sección contiene las preguntas frecuentes para las distintas visualizaciones de la aplicación.</p>
             -->
@@ -184,7 +185,29 @@
             <div class="cd-faq__items">
                 {% for key, values in faqs.items %}
                     <ul id="{{ key }}" class="cd-faq__group">
-                        <li class="cd-faq__title"><h2>{{ values.0.get_category_display }}</h2></li>
+                        <li class="cd-faq__title">
+                            <h2>
+                                {% if key == "speed" %}
+                                    <i class="fa fa-tachometer"></i>
+                                {% elif key == 'route' %}
+                                    <i class="fa fa-map"></i>
+                                {% elif key == 'trip' %}
+                                    <i class="fa fa-line-chart"></i>
+                                {% elif key == 'profile' %}
+                                    <i class="fa fa-bus"></i>
+                                {% elif key == 'paymentfactor' %}
+                                    <i class="fa fa-dollar"></i>
+                                {% elif key == 'administration' %}
+                                    <i class="fa fa-users"></i>
+                                {% elif key == 'storage' %}
+                                    <i class="fa fa-cloud-download"></i>
+                                {% elif key == 'global' %}
+                                    <i class="fa fa-clone"></i>
+                                {% elif key == 'general' %}
+                                    <i class="fa fa-question-circle-o"></i>
+                                {% endif %}
+                                {{ values.0.get_category_display }}
+                            </h2></li>
                         {% for question in values %}
                             <li class="cd-faq__item">
                                 <a class="cd-faq__trigger" href="#0"><span
