--- a/templates/help/modal/modal_base_xl.html
+++ b/templates/help/modal/modal_base_xl.html
@@ -3,16 +3,8 @@
 {# modal_id #}
 {# modal_title #}
 {# modal_body #}
-<style>
-    @media (min-width: 992px) {
-        .modal-lg {
-            width: 900px;
-        }
-    }
-</style>
 <div class="modal fade" id="{{ modal_id }}" tabindex="-1" role="dialog" aria-labelledby="{{ modal_id }}Label">
-    <div class="modal-dialog modal-lg" style="width: 90%;
-   max-width:1200px" role="document">
+    <div class="modal-dialog modal-lg"  role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
