Cambio de nombre en template base.

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -81,7 +81,7 @@
               </li>
               {% endif %}
               {% if perms.localinfo.validation %}
-              <li><a><i class="fa fa-dollar"></i> Validaciones <span class="fa fa-chevron-down"></span></a>
+              <li><a><i class="fa fa-dollar"></i> Transacciones <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                   <li><a href="{% url 'paymentfactor:index' %}"> Dist. en zona paga mixta</a></li>
                   <li><a href="{% url 'bip:operator' %}"> Transacciones por operador</a></li>
