Se cambia validaciones por transacciones.

--- a/paymentfactor/templates/paymentfactor/index.html
+++ b/paymentfactor/templates/paymentfactor/index.html
@@ -1,7 +1,7 @@
 {% extends 'paymentfactor/base.html' %}
 {% load static header panel inline_select table columns update_button label data_filter tabs %}
 
-{% block title %}Distribución de validaciones en zona paga mixta{% endblock %}
+{% block title %}Distribución de transacciones en zona paga mixta{% endblock %}
 
 {% block css %}
     {{ block.super }}
