Se agrega descripciones de posición en el mapa.

--- a/templates/help/modal/explanation/speed/matrix/map.html
+++ b/templates/help/modal/explanation/speed/matrix/map.html
@@ -3,6 +3,8 @@
 {% block title %}Posición en el mapa{% endblock title %}
 
 {% block body %}
-    <p></p>
+  {% include 'help/modal/filters/speed_map.html' %}
+  {% include 'help/modal/filters/speed_map_by_section.html' %}
+
 
 {% endblock body %}
