--- a/templates/help/modal/explanation/speed/ranking/map.html
+++ b/templates/help/modal/explanation/speed/ranking/map.html
@@ -3,6 +3,5 @@
 {% block title %}Posición en el mapa{% endblock title %}
 
 {% block body %}
-    <p></p>
-
+  {% include 'help/modal/filters/speed_map.html' %}
 {% endblock body %}
