Se crean las burbujas de velocidad.

--- a/templates/help/modal/filters/speed_map.html
+++ b/templates/help/modal/filters/speed_map.html
@@ -1,4 +1,5 @@
 <dl class="dl-horizontal">
     <dt>Velocidad</dt>
-    <dd>La velocidad mostrada representa la velocidad calculadas para cada tramo individualmente.</dd>
+    <dd>La velocidad mostrada representa la velocidad promedio para cada tramo individualmente. Esto se calcula como el promedio de
+      distancias recorridas en el tramo dividido por el tiempo promedio recorrido en este.</dd>
 </dl>
