--- a/templates/help/modal/filters/speed_map_by_section.html
+++ b/templates/help/modal/filters/speed_map_by_section.html
@@ -1,4 +1,5 @@
 <dl class="dl-horizontal">
     <dt>Selección por tramos</dt>
-    <dd>La velocidad mostrada representa el cálculo de la velocidad entre el tramo inicial y final. </dd>
+    <dd>La velocidad mostrada representa el cálculo de la velocidad promedio entre el tramo inicial y final.
+    Esta se calcula como la distancia promedio recorrida entre el tramo inicial y final dividido en el tiempo promedio recorrido entre ambos tramos.</dd>
 </dl>
