Se corrigen las descripciones.

--- a/templates/help/modal/filters/speed_map.html
+++ b/templates/help/modal/filters/speed_map.html
@@ -1,5 +1,5 @@
 <dl class="dl-horizontal">
     <dt>Velocidad</dt>
-    <dd>La velocidad mostrada representa la velocidad promedio para cada tramo individualmente. Esto se calcula como el promedio de
-      distancias recorridas en el tramo dividido por el tiempo promedio recorrido en este.</dd>
+    <dd>La velocidad mostrada representa la velocidad promedio para cada tramo individualmente. Esto se calcula
+      como la suma de las distancias recorridas por todas las observaciones del tramo dividido por la suma de los tiempos recorridos por todas las observaciones del tramo.</dd>
 </dl>
