--- a/templates/help/modal/filters/speed_map_by_section.html
+++ b/templates/help/modal/filters/speed_map_by_section.html
@@ -1,5 +1,6 @@
 <dl class="dl-horizontal">
     <dt>Selección por tramos</dt>
     <dd>La velocidad mostrada representa el cálculo de la velocidad promedio entre el tramo inicial y final.
-    Esta se calcula como la distancia promedio recorrida entre el tramo inicial y final dividido en el tiempo promedio recorrido entre ambos tramos.</dd>
+    Esta se calcula como la suma de todas las distancias de todas las observaciones de todos los tramos dividida
+      por la suma de todos los tiempos de todas las observaciones de todos los tramos considerados.</dd>
 </dl>
