Se crea nueva sección de almacenamiento, velocidades PO.

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -96,6 +96,8 @@
                       <li><a href="{% url 'awsbackup:stage' %}"> Etapas</a></li>
                       <li><a href="{% url 'awsbackup:speed' %}"> Velocidades</a></li>
                       <li><a href="{% url 'awsbackup:transaction' %}"> Transacciones</a></li>
+                        <li><a href="{% url 'awsbackup:opspeed' %}"> Velocidades PO</a></li>
+
                     </ul>
                   </li>
                 {% endif %}
