--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -79,6 +79,8 @@
                         Frecuentes</a></li>
                       <li><a href="{% url 'admin:localinfo_customroute_changelist' %}">Diccionario
                         de servicios</a></li>
+                        <li><a href="{% url 'consistencychecker:concistency' %}"> Inconsistencias</a></li>
+
                     </ul>
                   </li>
                 {% endif %}
