--- a/consistencychecker/templates/consistencychecker/consistency.html
+++ b/consistencychecker/templates/consistencychecker/consistency.html
@@ -22,7 +22,6 @@
 
 {% block content %}
 
-    <div class="">
     {% header "Inconsistencias de Datos" %}
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
@@ -38,19 +37,14 @@
         <script src="{% static gentelella_static|add:"datatables.net/js/jquery.dataTables.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"datatables.net-bs/js/dataTables.bootstrap.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"datatables.net-buttons/js/dataTables.buttons.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-buttons-bs/js/buttons.bootstrap.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-buttons/js/buttons.flash.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"datatables.net-buttons/js/buttons.html5.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-buttons/js/buttons.print.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-fixedheader/js/dataTables.fixedHeader.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"datatables.net-keytable/js/dataTables.keyTable.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-responsive/js/dataTables.responsive.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-responsive-bs/js/responsive.bootstrap.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-scroller/js/dataTables.scroller.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"datatables.net-buttons/js/buttons.colVis.js" %}"></script>
         <script src="{% static gentelella_static|add:"jszip/dist/jszip.min.js" %}"></script>
-        <script src="{% static gentelella_static|add:"pdfmake/build/pdfmake.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"jquery-sparkline/dist/jquery.sparkline.min.js" %}"></script>
 
+        <script src="{% static gentelella_static|add:"datatables.net-buttons/js/dataTables.buttons.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"jszip/dist/jszip.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"datatables.net-buttons/js/buttons.html5.min.js" %}"></script>
     {% endwith %}
     <script src="{% static "consistencychecker/js/loadConsistency.js" %}"></script>
 {% endblock %}
