--- a/consistencychecker/templates/consistencychecker/consistency.html
+++ b/consistencychecker/templates/consistencychecker/consistency.html
@@ -25,9 +25,12 @@
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
             {% table html_id="fechas-id" columns=9 with_checker=False as file_table %}
-            {% panel title_icon="fa-file" title="Fechas" body=file_table %}
+            {% panel title_icon="fa-file" title="Fechas" body=file_table info_target_id="tableHelp" %}
         </div>
     </div>
+
+    {% include "help/modal/explanation/consistencychecker/consistency/table.html" with modal_id="tableHelp" %}
+
 
 {% endblock %}
 
