--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -98,11 +98,9 @@
                       <li><a href="{% url 'awsbackup:stage' %}"> Etapas</a></li>
                       <li><a href="{% url 'awsbackup:speed' %}"> Velocidades</a></li>
                       <li><a href="{% url 'awsbackup:transaction' %}"> Transacciones</a></li>
-                        <li><a href="{% url 'awsbackup:early-transaction' %}">Subidas por parada</a></a></li>
-                        <li><a href="{% url 'awsbackup:opspeed' %}"> Velocidades PO</a></li
-                        <li><a href="{% url 'awsbackup:stoptime' %}"> Cruce buses por paraderos</a></li>
-
-
+                      <li><a href="{% url 'awsbackup:early-transaction' %}">Subidas por parada</a></li>
+                      <li><a href="{% url 'awsbackup:opspeed' %}"> Velocidades PO</a></li>
+                      <li><a href="{% url 'awsbackup:stoptime' %}"> Cruce buses por paraderos</a></li>
                     </ul>
                   </li>
                 {% endif %}
