--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -129,14 +129,14 @@
                 <li><a><i class="fa fa-tachometer"></i> Velocidades <span
                         class="fa fa-chevron-down"></span></a>
                   <ul class="nav child_menu">
-                    <li><a href=" {% url "speed:matrix" %} "> matriz por servicio</a></li>
-                    <li><a href=" {% url "speed:ranking" %} "> ranking de velocidades</a></li>
-                    <li><a href=" {% url "speed:variation" %} "> variación de velocidades</a></li>
+                    <li><a href=" {% url "speed:matrix" %} "> Matriz por servicio</a></li>
+                    <li><a href=" {% url "speed:ranking" %} "> Ranking de velocidades</a></li>
+                    <li><a href=" {% url "speed:variation" %} "> Variación de velocidades</a></li>
                   </ul>
                 </li>
                 <li><a><i class="fa fa-map"></i> Rutas <span class="fa fa-chevron-down"></span></a>
                   <ul class="nav child_menu">
-                    <li><a href=" {% url "shape:map" %} "> mapa</a></li>
+                    <li><a href=" {% url "shape:map" %} "> Mapa</a></li>
                   </ul>
                 </li>
                 {% if perms.localinfo.travel %}
