Se agrega administrador de Diccionarios OP. Se modifica loadManager para utilizarlo en dos vistas Se crean nueva vista para programas de operación. Se agrega acceso a través de columna izquierda.

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -49,8 +49,19 @@
                       <li><a href="{% url 'admin:datamanager_datasourcepath_changelist' %}">
                         Fuentes de datos</a></li>
                       <li><a href="{% url 'datamanager:loadmanager' %}"> Carga de datos</a></li>
+                      <li><a>Programa de Operación<span class="fa fa-chevron-down"></span></a>
+                        <ul class="nav child_menu" style="">
+                          <li class="sub_menu"><a
+                                  href="{% url 'datamanager:loadmanagerOP' %}">Carga de Datos</a>
+                          </li>
+                          <li>
+                            <a href="{% url 'admin:logapp_usersessionstats_changelist' %}">Diccionario PO</a>
+                          </li>
+                        </ul>
+                      </li>
                       <li><a href="{% url 'admin:datamanager_uploaderjobexecution_changelist' %}">
-                        Historial de carga archivos</a></li>
+                        Historial de carga archivos</a>
+                      </li>
                       <li><a href="{% url 'admin:datamanager_exporterjobexecution_changelist' %}">
                         Historial de exp. archivos</a></li>
                       <li><a href="{% url 'rq_home' %}"> Cola de carga</a></li>
