--- a/datamanager/templates/datamanager/loadManager.html
+++ b/datamanager/templates/datamanager/loadManager.html
@@ -1,7 +1,7 @@
 {% extends 'admin/base_site.html' %}
 {% load static panel bubble_message table tabs header %}
 
-{% block title %}Administrador de carga de datos{% endblock %}
+{% block title %}{{  tables|yesno:'Administrador de carga de datos,Programa de operación'  }}{% endblock %}
 
 {% block css %}
     {% with "components/gentelella/vendors/" as gentelella_static %}
@@ -33,6 +33,7 @@
 
 {% block content %}
     <div class="">
+    {% if tables %}
         {% header "Administrador de carga de datos" %}
         <div class="row">
             {% for table in tables %}
@@ -42,6 +43,8 @@
                 </div>
             {% endfor %}
         </div>
+    {% endif %}
+    {% if operation_program_tables %}
         {% header "Programa de operación" %}
     {% bubble_message "" "<p>El programa de operación es representado dentro de la plataforma a través de dos archivos:</p><ul><li>Geometría de servicios: ruta física de cada servicio</li><li>Secuencia de paradas: secuencia de paradas de cada servicio</li></ul><p>Estos archivos generan umbrales temporales en los datos, es decir, datos generados con programas de operación distintos se consideran no comparables, situación que será considerada en las vistas</p>" "success" %}
         <div class="row">
@@ -53,7 +56,7 @@
             {% endfor %}
         </div>
     </div>
-
+    {% endif %}
     {% include "help/modal/modal.html" with show_ok_button=True modal_id="modal" %}
 {% endblock %}
 
