Se agrega ruta de usuario.

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -148,7 +148,7 @@
                 </li>
                 <li><a><i class="fa fa-map"></i> Rutas <span class="fa fa-chevron-down"></span></a>
                   <ul class="nav child_menu">
-                    <li><a href=" {% url "shape:map" %} "> Mapa</a></li>
+                    <li><a href=" {% url "shape:map" %} "> Ficha de servicios</a></li>
                   </ul>
                 </li>
                 {% if perms.localinfo.travel %}
