--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -244,7 +244,7 @@
                 </ul>
               </li>
               <li>
-                <a target="_blank" href="{% url 'faq' %}">
+                  <a target="_blank" href="{% url 'localinfo:faq' %}">
                   <i class="fa fa-question-circle-o fa-5x"></i>
                 </a>
               </li>
