--- a/templates/help/modal/modal_shape.html
+++ b/templates/help/modal/modal_shape.html
@@ -12,7 +12,7 @@
                 {{ modal_body }}
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
-                        {% table "shapeDetail" 0 False %}
+                        {% table "shapeDetail" 6 %}
                     </div>
                 </div>
             </div>
