--- a/templates/admin/localinfo/faq/change_form.html
+++ b/templates/admin/localinfo/faq/change_form.html
@@ -89,7 +89,7 @@
 {# JavaScript for prepopulated fields #}
 {% prepopulated_fields_js %}
  <script>
-    var HOST = "{% url 'faqUpload' %}";
+    var HOST = "{% url 'localinfo:faqUpload' %}";
 
 addEventListener("trix-attachment-add", function(event) {
     if (event.attachment.file) {
