--- a/shape/templates/shape/mapBase.html
+++ b/shape/templates/shape/mapBase.html
@@ -72,6 +72,12 @@
         .select2-selection--single .select2-selection__rendered {
             line-height: 18px !important;
         }
+
+        .form-group {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
     </style>
 {% endblock %}
 
