Fix selector size

--- a/shape/templates/shape/mapBase.html
+++ b/shape/templates/shape/mapBase.html
@@ -85,6 +85,7 @@
             pointer-events: none;
             background-color: rgba(255, 255, 255, 0.2);
             border-color: rgba(255, 255, 255, 0.2);
+            font: 14px/16px Arial, Helvetica, sans-serif;
         }
 
         .input-xs {
